--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
+    "html2canvas": "^1.4.1",
     "next": "12.2.5",
     "postcss": "^8.4.16",
     "react": "18.2.0",
